dark mode tailwind toggle fixed

--- a/src/global.css
+++ b/src/global.css
@@ -9,13 +9,13 @@
   font-weight: 400;
 }
 
-.theme-light {
+.light {
   --elements: hsl(0, 0%, 100%);
   --background: hsl(0, 0%, 98%);
   --text: hsl(200, 15%, 8%);
   --input: hsl(0, 0%, 52%);
 }
-.theme-dark {
+.dark {
   --elements: hsl(209, 23%, 22%);
   --background: hsl(207, 26%, 17%);
   --text: hsl(0, 0%, 100%);
@@ -26,23 +26,20 @@ header{
   color: var(--text);
   display: flex;
   justify-content: space-between;
+
 }
 
-
-body,
-.content {
-  margin: 0;
-  min-height: 100vh;
-  background-color: var(--background);
-  color: var(--text);
+body{
+    margin: 0;
+    background-color: var(--background);
+     color: var(--text);
+    min-height: 100vh;
 }
 
 .content {
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center;
-  place-items: center;
-  width: 100%; */
+  width: 100%;
 }
 
 :focus-visible {
